fix: image overflow and wrong sidenav text

--- a/src/app/components/champion-rotations/champion-rotations.component.scss
+++ b/src/app/components/champion-rotations/champion-rotations.component.scss
@@ -1,7 +1,7 @@
 .container {
   padding: 2rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 1rem;
 }
 
@@ -9,4 +9,11 @@ img {
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   cursor: url("../../../assets/hover.png"), auto;
+}
+
+@media only screen and (max-width: 900px) {
+  .container {
+    grid-template-columns: 1fr;
+    padding: 1rem;
+  }
 }
